--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,14 +62,9 @@
     <Analyzer Include="D:\Unity\Editor\6000.0.37f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Player\Movement.cs" />
-    <Compile Include="Assets\Scripts\Manager\GameManager.cs" />
-    <Compile Include="Assets\Scripts\Multiplayer\LoginManager.cs" />
-    <Compile Include="Assets\Scripts\Multiplayer\NetworkManagerUI.cs" />
-    <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
-    <Compile Include="Assets\Scripts\Manager\BootstrapeManager.cs" />
-    <Compile Include="Assets\Scripts\Player\Shooting.cs" />
-    <Compile Include="Assets\Scripts\Player\CarDataScriptableObject.cs" />
+    <Compile Include="Assets\Scripts\Multiplayer\GetLobbyManager.cs" />
+    <Compile Include="Assets\Scripts\Multiplayer\LobbySystem.cs" />
+    <Compile Include="Assets\Scripts\Multiplayer\LobbyItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
