--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,9 +62,20 @@
     <Analyzer Include="D:\Unity\Editor\6000.0.37f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Multiplayer\GetLobbyManager.cs" />
-    <Compile Include="Assets\Scripts\Multiplayer\LobbySystem.cs" />
-    <Compile Include="Assets\Scripts\Multiplayer\LobbyItem.cs" />
+    <Compile Include="Assets\Scripts\Manager\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Multiplayer\JoinLobbyUI.cs" />
+    <Compile Include="Assets\Scripts\Manager\Loader.cs" />
+    <Compile Include="Assets\Scripts\Multiplayer\GameLobby.cs" />
+    <Compile Include="Assets\Scripts\Multiplayer\CreateLobbyUI.cs" />
+    <Compile Include="Assets\Scripts\Player\PlayerVisual.cs" />
+    <Compile Include="Assets\Scripts\Multiplayer\LobbyUI.cs" />
+    <Compile Include="Assets\Scripts\Manager\CharacterSelect.cs" />
+    <Compile Include="Assets\Scripts\Multiplayer\CharacterSelectUI.cs" />
+    <Compile Include="Assets\Scripts\Manager\MultiplayerManager.cs" />
+    <Compile Include="Assets\Scripts\Multiplayer\NetworkUI.cs" />
+    <Compile Include="Assets\Scripts\Player\PlayerMovement_Test.cs" />
+    <Compile Include="Assets\Scripts\Player\PlayerData.cs" />
+    <Compile Include="Assets\Scripts\Multiplayer\CharacterReady.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
