--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Manager\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Player\TeamRoleData.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\JoinLobbyUI.cs" />
     <Compile Include="Assets\Scripts\Manager\Loader.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\GameLobby.cs" />
