Added Shooting mechanics.
+ Added IShooter interface for weapon behavior
+ Added GunStats scriptable object
+ Added Gun script for shooting
+ Added Shooter to check the mechanics locally

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,18 +64,23 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Core\Interfaces\ICarMovement.cs" />
     <Compile Include="Assets\PROMETEO - Car Controller\Scripts\CameraFollow.cs" />
+    <Compile Include="Assets\Scripts\Events\GameEvents.cs" />
     <Compile Include="Assets\Scripts\Manager\GameManager.cs" />
     <Compile Include="Assets\Scripts\Player\TeamRoleData.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\JoinLobbyUI.cs" />
     <Compile Include="Assets\Scripts\Manager\Loader.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\GameLobby.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\CreateLobbyUI.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\Shooting\Bullet.cs" />
     <Compile Include="Assets\Scripts\Gameplay\Car\CarControllerWrapper.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerVisual.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\LobbyUI.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\Shooting\GunStats.cs" />
     <Compile Include="Assets\PROMETEO - Car Controller\Scripts\PrometeoTouchInput.cs" />
     <Compile Include="Assets\Scripts\Gameplay\Turret\TurretController.cs" />
     <Compile Include="Assets\Scripts\Manager\CharacterSelect.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\Shooting\Shooter.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\Shooting\Gun.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\CharacterSelectUI.cs" />
     <Compile Include="Assets\Scripts\Core\Interfaces\CarAdapter.cs" />
     <Compile Include="Assets\Scripts\Temporary Scripts\ManualTestSetup.cs" />
@@ -84,6 +89,7 @@
     <Compile Include="Assets\PROMETEO - Car Controller\Scripts\PrometeoCarController.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMovement_Test.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerData.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\Shooting\IShooter.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\CharacterReady.cs" />
   </ItemGroup>
   <ItemGroup>
