--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\PROMETEO - Car Controller\Scripts\CameraFollow.cs" />
     <Compile Include="Assets\Scripts\Events\GameEvents.cs" />
     <Compile Include="Assets\Scripts\Manager\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\Turret\ShooterCameraController.cs" />
     <Compile Include="Assets\Scripts\Player\TeamRoleData.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\JoinLobbyUI.cs" />
     <Compile Include="Assets\Scripts\Manager\Loader.cs" />
