--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Assets\Scripts\Player\PlayerData.cs" />
     <Compile Include="Assets\Scripts\Gameplay\Shooting\IShooter.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\CharacterReady.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\Spawning\CarSpawnerManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
