--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -71,14 +71,14 @@
     <Compile Include="Assets\Scripts\Player\TeamRoleData.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\JoinLobbyUI.cs" />
     <Compile Include="Assets\Scripts\Manager\Loader.cs" />
-    <Compile Include="Assets\project level 1\project level 1\Assets\Scripts\InstancedMesh.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\Health\Health.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\GameLobby.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\CreateLobbyUI.cs" />
     <Compile Include="Assets\Scripts\Gameplay\Shooting\Bullet.cs" />
     <Compile Include="Assets\Scripts\Gameplay\Car\CarControllerWrapper.cs" />
+    <Compile Include="Assets\Scripts\Core\Interfaces\IDamageable.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerVisual.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\LobbyUI.cs" />
-    <Compile Include="Assets\project level 1\project level 1\Assets\Scripts\Utilities.cs" />
     <Compile Include="Assets\Scripts\Gameplay\Shooting\GunStats.cs" />
     <Compile Include="Assets\Scripts\Gameplay\Car\DriverCameraController.cs" />
     <Compile Include="Assets\PROMETEO - Car Controller\Scripts\PrometeoTouchInput.cs" />
@@ -88,7 +88,6 @@
     <Compile Include="Assets\Scripts\Gameplay\Shooting\Gun.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\CharacterSelectUI.cs" />
     <Compile Include="Assets\Scripts\Core\Interfaces\CarAdapter.cs" />
-    <Compile Include="Assets\project level 1\project level 1\Assets\Scripts\TreeInstanceComponent.cs" />
     <Compile Include="Assets\Scripts\Manager\MultiplayerManager.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\NetworkUI.cs" />
     <Compile Include="Assets\PROMETEO - Car Controller\Scripts\PrometeoCarController.cs" />
@@ -100,143 +99,33 @@
     <Compile Include="Assets\Scripts\Gameplay\Spawning\CarSpawnerManager.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\M_AnimFabric01.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_BrickWall07.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_BrickWall08.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile-2-Pass.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_GroundBlend02.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\UnrealCommon.cginc" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Lighthouse02.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\M_SimpleSkyDome.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_CoverFabric01.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Ornaments02.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Ground01.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\LargeWorldCoordinates.hlsl" />
     <None Include="Assets\BOXOPHOBIC\Skybox Cubemap Extended\Core\Shaders\Skybox Cubemap Extended.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_CineMat_CamViewFinder.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\M_Sky_Panning_Clouds2.hlsl" />
     <None Include="Assets\BOXOPHOBIC\Utils\Shaders\Channel Preview.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_RoofStones.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Door02Color01.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Wood03.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Ornaments01.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_WallTrim01.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_FabricWall01.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_DoorFrame01.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Concrete01.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\LWCOperations.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Ornaments02Color02.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_WallTrim02.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_BrickWall04.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_BrickWall05.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Concrete02.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Statue01.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\DefaultMaterial.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\SDFFunctions.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\M_CrackDecalMaster.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Wood04.hlsl" />
     <None Include="Assets\BOXOPHOBIC\Skybox Cubemap Extended\Core\Shaders\Skybox Cubemap Blend.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_WoodPlanls01.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_ArchDetails02.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_ProcGrid.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Lantern01.hlsl" />
     <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_CineMat_CameraBody.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Door01Color01.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Fabric01.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_AnimFabric02.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Treasures.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Statue02.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Ornaments03Color01.hlsl" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_CoverFabric02.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Fabric02.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_RoundColumn02.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\WorldGridMaterial.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Fabric01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Treasures.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Ornaments03Color01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_RoofStones.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_GroundBlend02.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_ArchDetails03.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_ProcGrid.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_BrickWall05.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Wood04.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_LargeBlocks01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Wood03.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_BrickWall03.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_AnimFabric02.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_WoodPlanls01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\M_CrackDecalMaster.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Ornaments02.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Door01Color01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Wood05.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_BrickWall04.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\M_Sky_Panning_Clouds2.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_WallTrim02.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Lighthouse02.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_BrickWall08.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_CoverFabric02.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_CineMat_CameraBody.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\M_AnimFabric01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_DebrisStone01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Concrete01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Statue01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Ornaments01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_FabricWall01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_DoorFrame01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_CoverFabric01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Ornaments02Color02.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_CineMat_CamViewFinder.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_ArchDetails02.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Statue02.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Ornaments02Color01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_RoundColumn01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_WoodAndMetal.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Door02Color01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\DefaultMaterial.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Ground01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\M_SimpleSkyDome.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Lantern01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_ArchDetails01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_BrokenConcrete01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_WallTrim01.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Concrete02.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_BrickWall07.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_BrokenConcrete01.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_ArchDetails03.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_DebrisStone01.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_WoodAndMetal.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Ornaments02Color01.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_ArchDetails01.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Fabric02.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\WorldGridMaterial.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_BrickWall03.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_LargeBlocks01.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_RoundColumn01.hlsl" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_RoundColumn02.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
-    <None Include="Assets\project level 1\project level 1\Assets\Shaders\MI_Wood05.hlsl" />
     <None Include="Assets\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
     <None Include="Assets\PROMETEO - Car Controller\Fonts\Licence.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Sprite.shader" />
-    <None Include="Assets\project level 1\project level 1\ProjectSettings\ProjectVersion.txt" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -1275,10 +1164,6 @@
       <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.GPUDriven.Runtime.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Autodesk.Fbx">
-      <HintPath>Library\ScriptAssemblies\Autodesk.Fbx.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="Unity.Services.Authentication.PlayerAccounts">
       <HintPath>Library\ScriptAssemblies\Unity.Services.Authentication.PlayerAccounts.dll</HintPath>
       <Private>False</Private>
@@ -1341,10 +1226,6 @@
     </Reference>
     <Reference Include="Unity.Multiplayer.Tools.NetworkSimulator.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Multiplayer.Tools.NetworkSimulator.Editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Autodesk.Fbx.Editor">
-      <HintPath>Library\ScriptAssemblies\Autodesk.Fbx.Editor.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
@@ -1571,10 +1452,6 @@
       <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.Editor.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Unity.Formats.Fbx.Runtime">
-      <HintPath>Library\ScriptAssemblies\Unity.Formats.Fbx.Runtime.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="Unity.Services.Core.Environments">
       <HintPath>Library\ScriptAssemblies\Unity.Services.Core.Environments.dll</HintPath>
       <Private>False</Private>
@@ -1605,10 +1482,6 @@
     </Reference>
     <Reference Include="Unity.Services.Core">
       <HintPath>Library\ScriptAssemblies\Unity.Services.Core.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Formats.Fbx.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.Formats.Fbx.Editor.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Unity.Burst">
