Added health bar UI and fixes
+Added healthbar UI with a role label
+Color changing healthBar
+Fixed a problem where the players could shoot and kill each other, resulting in a complete breakage of the game loop
+Players can now only kill in the Arena and not in the lobby

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Assets\Scripts\Core\Interfaces\ICarMovement.cs" />
     <Compile Include="Assets\PROMETEO - Car Controller\Scripts\CameraFollow.cs" />
     <Compile Include="Assets\Scripts\Manager\VehicleCameraManager.cs" />
+    <Compile Include="Assets\Scripts\User Interface\PlayerHealthUI.cs" />
     <Compile Include="Assets\Scripts\Events\GameEvents.cs" />
     <Compile Include="Assets\Scripts\Manager\GameManager.cs" />
     <Compile Include="Assets\Scripts\Gameplay\Turret\ShooterCameraController.cs" />
