--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Assets\Scripts\Gameplay\Shooting\IShooter.cs" />
     <Compile Include="Assets\Scripts\Manager\LobbyCountdownManager.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\CharacterReady.cs" />
+    <Compile Include="Assets\Scripts\User Interface\PersistHealthUI.cs" />
     <Compile Include="Assets\Scripts\Gameplay\Spawning\CarSpawnerManager.cs" />
   </ItemGroup>
   <ItemGroup>
