Added dynamic sound system
+Added sound effects for the rifle and the launcher
+Added an explosion sound for the vehicle when destroyed.
+Tweaked rifle stats for a realistic rifle sound.
+Added a static helper, ExplosionSoundHelper.cs that loads the from the resources
+Audio clips moved to Assets/Resources/Audio

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Assets\Scripts\Manager\MultiplayerManager.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\NetworkUI.cs" />
     <Compile Include="Assets\PROMETEO - Car Controller\Scripts\PrometeoCarController.cs" />
+    <Compile Include="Assets\Scripts\Audio\ExplosionSoundHelper.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMovement_Test.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerData.cs" />
     <Compile Include="Assets\Scripts\Gameplay\Shooting\IShooter.cs" />
