Added sandstorm mechanic
+A sandstorm spawns in the game arena at a random time interval
+Added a warning panel to warn the player of the sandstorm
+Added a mechanic to ensure that the tornados spawn inside of the playable area
+Player cars settings get's changed when the storm hits, resulting in difficulty to control thier cars
+Made a few changes in the car controller wrapper for sandstorm tweaks

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\JMO Assets\WarFX\Demo\Assets\CFX_Demo_RotateCamera.cs" />
     <Compile Include="Assets\Scripts\Events\GameEvents.cs" />
     <Compile Include="Assets\Scripts\User Interface\HealthUIManager.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\Sandstorm\StormController.cs" />
     <Compile Include="Assets\Scripts\Manager\GameManager.cs" />
     <Compile Include="Assets\Scripts\Gameplay\Turret\ShooterCameraController.cs" />
     <Compile Include="Assets\Scripts\Player\TeamRoleData.cs" />
@@ -105,6 +106,7 @@
     <Compile Include="Assets\Scripts\Multiplayer\NetworkUI.cs" />
     <Compile Include="Assets\PROMETEO - Car Controller\Scripts\PrometeoCarController.cs" />
     <Compile Include="Assets\Scripts\Audio\ExplosionSoundHelper.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\Sandstorm\TornadoController.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMovement_Test.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerData.cs" />
     <Compile Include="Assets\Scripts\Gameplay\Shooting\IShooter.cs" />
@@ -113,6 +115,7 @@
     <Compile Include="Assets\JMO Assets\WarFX\Demo\Assets\WFX_Demo_New.cs" />
     <Compile Include="Assets\Scripts\Manager\MenuMusicManager.cs" />
     <Compile Include="Assets\JMO Assets\WarFX\Demo\Assets\CFX_Demo_Translate.cs" />
+    <Compile Include="Assets\Scripts\Manager\SandstormManager.cs" />
     <Compile Include="Assets\JMO Assets\WarFX\Demo\Assets\CFX_Demo_RandomDir.cs" />
     <Compile Include="Assets\Scripts\Multiplayer\CharacterReady.cs" />
     <Compile Include="Assets\JMO Assets\WarFX\Spawn System\CFX_SpawnSystem.cs" />
